# ipytextual

./: .gitignore  LICENSE.txt  README.md  install.json  ipytextual.json  package-lock.json  package.json  pyproject.toml
examples/: introduction.ipynb
ipytextual/: __init__.py  driver.py  widget.py
src/: index.ts  widget.ts
