[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipytextual"
dynamic = ["version"]
description = "Jupyter Textual-based Widget"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [ { name = "David Brochart", email = "david.brochart@gmail.com" }, ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = [
    "jupyter",
    "widgets",
    "textual",
]
dependencies = [
    "textual",
]

[project.urls]
Homepage = "https://github.com/davidbrochart/ipytextual"

[tool.hatch.version]
path = "ipytextual/__init__.py"
